@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
'skinparam linetype orto
title US001 Class Diagram

skinparam classAttributeIconSize 0

'left to right direction

class ApplicationSession
{
    + static getInstance()
    + getCurrentSession()
}

class UserSession
{
    + getUserEmail()
}


class Skill {
    - int id
    - String description
    +getSkillId()
    +getSkillDescription()
    +setSkillDescription(String description)
    +isValidName(String name)

}


class SkillsRepository {
    -List<Skill> skills
    +SkillsRepository()
    +add(int skillId, String description)
    +update(int skillId, String description)
    +remove(int skillId)
    +exists(int skillId)
    +exists(String description)


}


class Repositories {
    - Repositories()
    + getInstance() : Repositories
}

class RegisterSkillController {
    -SkillsRepository skillsRepository
    -getSkillsRepository()
    +registerSkill(int skillId, String description)
    +skillExists(int skillId)
    +descExists(String description)

}

class RegisterSkillUI {
}

Repositories -> Repositories : instance
ApplicationSession -> ApplicationSession : instance

RegisterSkillUI .> RegisterSkillController

RegisterSkillController .> Repositories : repositories

Repositories -> "1" SkillsRepository

RegisterSkillController ..> SkillsRepository : skillsRepository

ApplicationSession --> "1" UserSession : userSession
RegisterSkillController ..> ApplicationSession
RegisterSkillController ..> UserSession
RegisterSkillController --> Skill : uses
SkillsRepository --> Skill : manages


@enduml